Made minor improvements to the docs
